Updates to url's and fixed layout issue

--- a/assets/css/05-layout/_posts.scss
+++ b/assets/css/05-layout/_posts.scss
@@ -16,6 +16,7 @@
   }
 
   @include bp(10) {
+    grid-template-rows: auto;
     grid-template-columns: auto 1fr;
 
     &_count {
